--- a/app/index.html
+++ b/app/index.html
@@ -26,26 +26,26 @@
         <tbody>
         <tr>
             <td>{{data.citation}}</td>
-            <td></td>
+            <td>{{data.citation|quote}}</td>
         </tr>
         <tr>
             <td>{{data.title}}</td>
-            <td></td>
+            <td>{{data.title|withoutH}}</td>
         </tr>
         <tr>
             <td>{{data.someText}}</td>
-            <td></td>
+            <td>{{data.someText|firsLetterUp}}</td>
         </tr>
         </tbody>
     </table>
-    <div class="active">
-        <label class="label label-default">and I repeat it in capitals </label>
+    <div class="active" ng-controller="upperCaseCtrl">
+        <label class="label label-default"> </label>
 
-        <h3>Input</h3>
+        <h3>{{toUpper(data.tellMe)}}</h3>
     </div>
 </div>
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="filter.js"></script>
 </body>
-</html>
+</html
