--- a/app/index.html
+++ b/app/index.html
@@ -16,17 +16,16 @@
     <div class="row">
         <div class="col-md-4 col-md-offset-2 text-center">
             <p class="label-danger">Enter / leave mouse </p>
-
-            <div class="circle center-block"></div>
+            <div enter="bg-danger" leave class="circle center-block"></div>
             <!--this div is the circle, use enter and leave directives there-->
         </div>
         <div class="-col-md-offset-2 col-md-4 text-center">
             <p class="label-info">Click / double click on</p>
-
-            <div class="square center-block"></div>
-            <!--this div is the square, use dblClick and click directives there-->
+            <div dbl-click-on="bg-info" click-on class="square center-block"></div>
         </div>
+        <!--this div is the square, use dblClick and click directives there-->
     </div>
+</div>
 </div>
 
 <script src="bower_components/angular/angular.js"></script>
