--- a/app/index.html
+++ b/app/index.html
@@ -15,14 +15,15 @@
     <div class="text-center">
         <div class="row alert-success form-control">
             <!--use restrictE directive here-->
+            <restrict-e></restrict-e>
         </div>
-        <div class="row alert-danger form-control">
-            <div></div><!--use restrictA directive there-->
+        <div class="row alert-danger form-control" >
+            <div restrict-a></div><!--use restrictA directive there-->
         </div>
         <div class="row alert-info form-control">
-            <div></div><!--use restrictC directive here-->
+            <div class="restrict-c"></div><!--use restrictC directive here-->
         </div>
-        <!--use restrictM directive here-->
+        <!-- directive:restrictM -->
     </div>
 </div>
 
