--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     </div>
     <div class="col-md-4">
         <!--here add your directive-->
+        <find-element></find-element>
     </div>
 </div>
 
