--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body ng-app="app">
+
+</script>
 <div class="container text-center">
     <div class="page-header">
         <h1>Template is a cool thing</h1>
