--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,13 @@
     <div class="page-header text-left"><h1>Route page</h1></div>
     <div>
         <!--here add directive-->
+        <ng-view></ng-view>
         <h2 class="text-center text-danger" ng-if="!condition">This is NOT correct html.</h2>
     </div>
 </div>
 
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
