--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
             <small>the correct way</small>
         </h1>
     </div>
+    <error></error>
     <ng-view></ng-view>
 </div>
 <script src="bower_components/angular/angular.js"></script>
