--- a/app/index.html
+++ b/app/index.html
@@ -1,60 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <title>AngularJS Tutorials</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
+<body>
 
-<body ng-app>
-<div class="container">
-    <div class="page-header">
-        <h1>1991
-            <small>Best songs</small>
-        </h1>
-    </div>
-    <div class="well col-md-4">
-        <div>
-            <label>First place </label>
-            <input id="first" type="text" ng-model="first" class="form-control" placeholder="info">
-        </div>
-        <div>
-            <label>Second place</label>
-            <input id="second" type="text" ng-model="second" class="form-control" placeholder="success">
-        </div>
-        <div>
-            <label>Third place</label>
-            <input id="third" type="text" ng-model="third" class="form-control" placeholder="danger">
-        </div>
-    </div>
-    <div class="col-md-8">
-        <table class="table table-condensed">
-            <thead>
-            <tr>
-                <th> Position</th>
-                <th> Artist</th>
-                <th> Song</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr class={{first}} id="firstRecord">
-                <td>1</td>
-                <td>Bryan Adams</td>
-                <td>(Everything I Do) I Do It for You</td>
-            </tr>
-            <tr class={{second}} id="secondRecord">
-                <td>2</td>
-                <td>Color Me Badd</td>
-                <td>I Wanna Sex You Up</td>
-            </tr>
-            <tr class={{third}} id="thirdRecord">
-                <td>3</td>
-                <td>C+C Music Factory</td>
-                <td>Gonna Make You Sweat (Everybody Dance Now)</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<script src="bower_components/angular/angular.js"></script>
 </body>
 </html>
