--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,11 @@
         </h1>
     </div>
     <!--add book directive-->
-
+    <book publisher ="">
+        <book-pages number="10"></book-pages>
+        <book-description> text=""</book-description>
+        <book-title title="The Da Vinci Code"></book-title>
+    </book>
 </div>
 <script src="bower_components/angular/angular.js"></script>
 <script src="book.js"></script>
