--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,9 @@
     </div>
     <div>
         <div class="panel-body text-center">
-            <button class="btn btn-default" ng-click="fifa.showPolandRank()">Where is Poland?</button>
-            <code ng-if="fifa.PolandRank"><!--event type--></code>
+            <button class="btn btn-default" ng-click="fifa.showPolandRank(); $log.debug($event);ev=$event">Where is Poland?</button>
+            <code ng-if="fifa.PolandRank"></code>
+            {{ev.type}}
         </div>
     </div>
     <div class="table-responsive">
@@ -29,7 +30,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="rank in fifa.ranking">
-                <td class="col-md-3"></td>
+                <td class="col-md-3">{{$index}}</td>
                 <td class="col-md-3">{{rank.team}}</td>
                 <td class="col-md-3">{{rank.points}}</td>
             </tr>
