--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,16 @@
         </h1>
     </div>
     <!--add directives-->
-    <audi></audi>
-    <car></car>
+    <vehicle>
+        <car>
+            <audi></audi>
+        </car>
+        <bus>
+            <jelcz></jelcz>
+        </bus>
+    </vehicle>
+
+
 
 </div>
 
